# Demo

./: test_cpp.cpp  test_file.txt  test_normal.txt  test_python.py  test_report.txt
.trae/rules/: project_rules.md
IDo/: .gitignore  README.md  README_EN.md  electron.vite.config.mjs  index.html  package-lock.json  package.json
IDo/src/main/: index.js
IDo/src/main/db/: index.js
IDo/src/main/ipc/: index.js
IDo/src/preload/: index.js
IDo/src/renderer/: App.css  App.jsx
IDo/src/renderer/components/: index.jsx
IDo/src/renderer/store/: useTaskStore.js
IDo/src/renderer/styles/: global.css
MacNotepad/: MacNotepad.dmg  Package.swift  ReadMe.md
MacNotepad/MacNotepad.app/Contents/: Info.plist
MacNotepad/MacNotepad.app/Contents/MacOS/: MacNotepad
MacNotepad/MacNotepad.app/Contents/Resources/: AppIcon.icns
MacNotepad/Sources/MacNotepad/: AdvancedTextEditor.swift  CodeFormatter.swift  ContentView.swift  DocumentManager.swift  FindReplaceView.swift  MacNotepadApp.swift  MacNotepadDocument.swift  SyntaxHighlighter.swift
MacNotepadPlusPlus/: CMakeLists.txt  DEVELOPMENT_PLAN.md  NEW_ARCHITECTURE_DESIGN.md  README.md  build.sh  package.sh
MacNotepadPlusPlus/NewNotepadPlusPlus/: CMakeLists.txt  Info.plist  README.md  SimpleTextEditor.m  test_simple_editor.py  功能实现说明.md  名称变更对照表.md  清理报告.md  版本更新日志.md
MacNotepadPlusPlus/NotepadPlusPlus/: AboutPanelManager.h  AboutPanelManager.mm  AppDelegate.h  AppDelegate.mm  AutoCompletionManager.h  AutoCompletionManager.mm  BookmarkManager.h  BookmarkManager.mm  CloudDocumentManager.h  CloudDocumentManager.mm  CodeFoldingManager.h  CodeFoldingManager.mm  DarkModeManager.h  DarkModeManager.mm  DocumentHistoryManager.h  DocumentHistoryManager.mm  DocumentSettingsManager.h  DocumentSettingsManager.mm  DocumentStatisticsPanel.h  DocumentStatisticsPanel.mm  EncodingConverterPanel.h  EncodingConverterPanel.mm  EncodingManager.h  EncodingManager.mm  EnhancedAutoCompletionManager.h  EnhancedAutoCompletionManager.mm  EnhancedBookmarkManager.h  EnhancedBookmarkManager.mm  EnhancedCodeFoldingManager.h  EnhancedCodeFoldingManager.mm  EnhancedEncodingManager.h  EnhancedEncodingManager.mm  EnhancedFindReplacePanel.h  EnhancedFindReplacePanel.mm  EnhancedMacroManager.h  EnhancedMacroManager.mm  EnhancedPreferencesPanel.h  EnhancedPreferencesPanel.mm  EnhancedPrintPanel.h  EnhancedPrintPanel.mm  (+68 more)
MacNotepadPlusPlus/NotepadPlusPlus/Resources/: MainMenu.xib
MacNotepadPlusPlus/NotepadPlusPlus/Resources/en.lproj/: Localizable.strings
MacNotepadPlusPlus/ScintillaFramework/: IListBoxDelegate.swift  InfoBarCommunicator.swift  ListBoxEvent.swift
MacNotepadPlusPlus/new_build/: CMakeCache.txt  Makefile  cmake_install.cmake
MacNotepadPlusPlus/new_build/NewNotepad++.app/Contents/: Info.plist
MacNotepadPlusPlus/new_build/NewNotepad++.app/Contents/MacOS/: NewNotepad++
python_test/: print-value.py  print2.py
